--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -10,6 +10,10 @@
     color: #7c7ff1;
 }
 
+.navigation__link-4 {
+    color: #cc9c22;
+}
+
 .navigation__link-1:hover {
     color: rgba(0, 255, 70, 0.4);
 }
@@ -20,4 +24,8 @@
 
 .navigation__link-3:hover {
     color: rgba(124, 127, 241, 0.4);
+}
+
+.navigation__link-4:hover {
+    color: rgba(204, 156, 34, 0.4);
 }
